package funcionalidades;

public interface NavegadorInternet {
    public void exibirPagina();
    public void adicionarNovaPagina();
    public void atualizarPagina();
}
