package funcionalidades;

public interface ReprodutorMusica {
    public void tocar();
    public void pausar();
    public void selecionarMusica();
}
